<resources>

    <string name="app_name">My_Todo_App</string>
    <string name="button_add">Add New Task</string>
    <string name="menu_settings">Settings</string>
    <string name="button_done">Done</string>
    <string name="button_sort">Sort Tasks By&#8230;</string>
    <string name="title_activity_my__todo__app">Mission Is Possible</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_task">New Task</string>
	<string name="button_back">Back</string>
	<string name="button_random">Random Fill</string>
	<string name="button_create">Create Task</string>
	<string name="enter_task_details">Insert Task Details</string>
	<string name="enter_task_name">Enter Task Name</string>
	<string name="task_name">Task:       </string>
	<string name="task_details">Details: </string>
	<string name="start_date">Starts: </string>
	<string name="due_date">Ends: </string>
	<string name="task_priority">Priority:</string>
	<string name="notify_flag">       </string>
	<string name="enter_task_description">Enter Task Description(Optional)</string>
	<string name="priority_prompt">Select Priority :</string>
	<string name="notify">Notify upon due date?</string>
	<string name="enter_task_date">Pick Task Due Date</string>
	<string name="pick_a_location">Pick Task Location</string>
	<string name="pop_done">Back</string>
	<string name="edit_task">Edit</string>
	<string name="del_task">Delete</string>
	<string name="task_status">Task Status</string>
	<string name="save_changes">Save changes</string>
	<string name="notifying_message">Notifing uppon due date</string>
	<string name="not_notifying_message">Not Notifing on due date</string>	
	<string name="urlString">http://mobile1-tasks-dispatcher.herokuapp.com/task/random</string>
	<string name="random_con_err">cannot establish connection to server</string>
	<string name="task_due_calendar">Due date and time:</string>
	<string name="button_address_search">Search address</string>
	<string name="enter_address">Enter address here&#8230;</string>
	<string name="location_picker">loaction picker logo</string>		
	<string name="downloading">Downloading Task From Web Server&#8230;</string>
	<string name="net_err_head">Internet Connection Error</string>
	<string name="net_err_msg">Please connect the internet and Try again</string>  	
	<string name="navigate_to_task">Navigate</string>
	<string name="share_task">Share task</string>
	<string name="address_distance_suffix">km` from your location</string>
	<string name="location_nullness">No Location</string>
	<string name="title_activity_task_map">Task Location</string>
	<string name="task_spot">My Task</string>
	<string name="show_task_on_map">Show Map</string>
	<string name="date_sorting_text">Sort By Due Date</string>
	<string name="importancy_sorting_text">Sort By Priority</string>
	<string name="location_sorting_text">Sort by Location</string>
	<string name="loc_prob">Location Problem, check location services</string>
	<string name="Google_Analytic_ID">UA-38750846-1</string>
</resources>